--- a/www/sites/all/themes/uclalib_omega/sass/components/_news-events-landing.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_news-events-landing.scss
@@ -35,6 +35,9 @@
       margin: 0;
     }
   }
+  .pane-title {
+    padding-right: 4.6875em;
+  }
   .pane-title a {
     color: $nav-link-color;
     font-size: 1.625em;
